translator/sil.peg
// Peggy grammar for SIL (SNOBOL Implementation Language)
// Translates SIL to the assembler's source listing.
// (C) Copyright 2012 by Ori Livneh
// Licensed under GPLv2

program
  = statements:statement+ end
{
    return statements;
}


statement "statement"
  = comment2* 
    label:label
    blank
    macro:macro
    blank
    operands:operands
    blank?
    comment:comment1?
    '\n'
{
    return {
        label,
        macro,
        operands,
        comment: comment || ''
    };
}


comment1 "trailing comment"
  = head:[^\n]*
    tail:( '\n*\t\t\t\t' tail:[^\t\n]+ { return tail.join( '' ).trim(); } )?
{
    head = head.join( '' ).replace(/^[,\s]+/, '' );
    tail = ( tail || '' ).replace(/^[,\s]+/, '' );
    if ( tail ) {
        head = head + ' ' + tail;
    }
    return head.trim();
}

comment2 "multi-line comment"
  = lines:( '*' comment:[^\n]* '\n' { return comment.join( '' ); } )+
{
    return lines.join( '\n' );
}

operands "operands"
  = head:variable tail:( ',' variable )*
{
    var result = [ head ];
    for ( var i = 0, max = tail.length; i < max; i++ ) {
        result.push( tail[i][1] );
    }
    return result;
}

variable
  = list
  / literal
  / expr
  / &( ',' ) { return null; }


expr "expression"
  = additive

additive
  = head:multiplicative tail:( operator:[+-] term:multiplicative { return { operator: operator, term: term }; } )*
{
    return tail.reduce( function ( left, node ) {
        return { operator: node.operator, operands: [ left, node.term ] };
    }, head );
}

multiplicative
  = head:unary tail:( operator:"*" term:unary { return { operator: operator, term: term }; } )*
{
    return tail.reduce( function ( left, node ) {
        return { operator: node.operator, operands: [ left, node.term ] };
    }, head );
}

unary
  = operator:[+-] argument:unary
{
    if ( operator === '+' ) {
        return argument;
    }
    return { negate: argument };
}
  / primary

primary
  = integer / name

literal "literal"
  = "'" literal:[^']* "'"
{
    literal = literal.join( '' );
    return literal;
}

integer "integer"
  = digits:[0-9]+
{
    return parseInt( digits.join( '' ), 10 );
}

list "list operand"
  = '(' head:variable tail:( ',' v:variable? { return v; } )* ')'
{
    var result = [];

    if ( head !== undefined || tail.length ) {
        tail.unshift( head );
        result = tail;
    }

    return result;
}

blank
  = [\u0009\u0020]+


label "label"
= label:( head:[A-Z] tail:[A-Z0-9]* { return head + tail.join( '' ); } )?
{
    return label;
}

name "name"
  = head:[A-Z] tail:[A-Z0-9]*
{
    var name = head + tail.join( '' );
    return { symbol: name };
}

macro "macro"
  = head:[A-Z] tail:[A-Z0-9]*
{
    return head + tail.join( '' );
}

end
  = blank 'END' ( blank / '\n' )* !.

/* vim: set ft=peggy: */
